ConfigInstanceBuilder replace Builder with Map-based constructor